[package]
name = "apib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["http1", "client"]}
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"]}
url = "2"

[profile.release]
# For profiling
# debug = true