[package]
name = "httptarget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
http-body-util = "0"
hyper = { version = "1", features = ["http1", "http2", "server"]}
hyper-util = { version = "0", features = ["full"] }
rustls = "0"
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"]}
tokio-rustls = "0"

[dev-dependencies]
reqwest = "0"
